--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "firebase": "^10.4.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
