--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
-    "firebase": "^10.4.0",
+    "firebase": "^11.3.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,8 +22,13 @@
     "react-select": "^5.8.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
+    "@types/firebase": "^3.2.3",
+    "@types/node": "^22.13.4",
+    "@types/react": "^18.3.18",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.45.0",
@@ -31,6 +37,18 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "typescript": "^5.7.3",
     "vite": "^4.4.5"
+  },
+  "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "extends": [
+      "plugin:react/recommended",
+      "plugin:@typescript-eslint/recommended"
+    ],
+    "rules": {}
   }
 }
