--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "facesjs": "^4.3.3",
     "firebase": "^11.3.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
